<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">HackWestern</string>
    <string name="hello_world">Hello world!</string>
    <string name="text_loc_title">Compose a TextLoc Message</string>
    <string name="recipient_details">Send message to</string>
    <string name="recipient_details_name">Name: </string>
    <string name="recipient_details_number">Phone Number: </string>
    <string name="action_settings">Settings</string>

    <string name="phone_number">Enter a Phone Number</string>
    <string name="message_action">Enter a message</string>
    <string name="location_prompt">Send message when I am at</string>
    <string name="send_text">Schedule Message</string>

    <string name="title_activity_listview">TextLoc</string>
    <string name="title_activity_contact">Choose Contact</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="map_text">View Map</string>
    <string name="title_activity_map">MapActivity</string>



    <string name="title_activity_show_geofence_transitions">ShowGeofenceTransitionsActivity</string>
    <string name="title_activity_main">MainActivity</string>

    <!-- Buttons strings -->
    <string name="add_geofences">Add geofences</string>
    <string name="remove_geofences">Remove geofences</string>

    <string name="geofences_added">Geofences added</string>
    <string name="geofences_removed">Geofences removed</string>

    <!-- Error strings -->
    <string name="not_connected">GoogleApiClient no yet connected. Try again.</string>
    <string name="geofence_not_available">Geofence service is not available now</string>
    <string name="geofence_too_many_geofences">Your app has registered too many geofences</string>
    <string name="geofence_too_many_pending_intents">
        You have provided too many PendingIntents to the addGeofences() call
    </string>
    <string name="unknown_geofence_error">
        Unknown error: the Geofence service is not available now
    </string>
    <string name="geofence_transition_invalid_type">
        Geofence transition error: invalid transition type %1$d
    </string>

    <!-- Transition type strings -->
    <string name="geofence_transition_entered">Entered</string>
    <string name="geofence_transition_exited">Exited</string>
    <string name="unknown_geofence_transition">Unknown Transition</string>

    <string name="geofence_transition_notification_text">Click notification to return to app</string>
</resources>
