<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linearLayout1"

    style="@style/main_page">

    <TextView
        android:text="@string/text_loc_title"
        style="@style/content_wrapping"
        android:textSize="@dimen/abc_text_size_large_material"/>

    <TextView
        android:text="@string/recipient_details"
        android:textStyle="bold"
        style="@style/content_wrapping"
        />
    <LinearLayout
        style="@style/content_wrapping"
        android:orientation="vertical"
        >
        <TextView
            android:id="@+id/repName"
            android:gravity="center"
            style="@style/content_wrapping"/>
        <TextView
            android:id="@+id/repNumber"
            android:gravity="center"
            style="@style/content_wrapping"/>
    </LinearLayout>

    <!--<TextView android:text="Enter a phone number to send the message to below"-->
        <!--style="@style/content_wrapping" />-->

    <!--<EditText-->
        <!--android:id="@+id/editTextPhone"-->
        <!--android:hint="@string/phone_number"-->
        <!--style="@style/content_wrapping" />-->

    <TextView
        android:text="Enter a text message below"
        style="@style/content_wrapping"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editTextSms"
        android:hint="@string/message_action"
        style="@style/content_wrapping"
        />

    <TextView
        android:text="@string/location_prompt"
        android:textStyle="bold"
        style="@style/content_wrapping"/>

    <Button
        android:id="@+id/buttonMap"
        android:text="@string/map_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />

    <Button
        android:id="@+id/buttonSend"
        android:text="@string/send_text"
        style="@style/content_wrapping.button"
        />

    <!--<Button-->
        <!--android:id="@+id/contactButton"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="Send Message"-->
        <!--/>-->

</LinearLayout>